--- a/encriptador.css
+++ b/encriptador.css
@@ -25,12 +25,14 @@
         width: 98%;
         height: 98%;
     }
-    #botones{
+
+    #botones {
         text-align: center;
         position: absolute;
         transform: translateY(-390px);
     }
-    #copiar{
+
+    #copiar {
         position: absolute;
         transform: translateY(250px) translateX(-110px);
     }
@@ -63,14 +65,20 @@
         width: 98%;
         height: 98%;
     }
-    #botones{
+
+    #botones {
         text-align: center;
         position: absolute;
         transform: translateY(-350px);
     }
-    #copiar{
+
+    #copiar {
         position: absolute;
         transform: translateY(290px);
+    }
+
+    #alert {
+        margin-left: 10%;
     }
 }
 
@@ -125,6 +133,10 @@
         background-image: none;
         content: "Hola";
     }
+
+    #alert {
+        margin-left: 10%;
+    }
 }
 
 #alertImg {
@@ -151,7 +163,7 @@
     border-radius: 10px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 40px;
     transition: 0.5s;
 }
 
